--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,7 @@
+@use "./base/reset";
+@use "./base/typography";
+@use "./abstracts/variables";
+@use "./components/button";
 *,
 *::before,
 *::after {
